--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -29,7 +29,7 @@
         <div id="navbar" class="navbar">
             <a href="#default" class="logo" style="color: white; cursor: default"> <img src="../images/favicon2.png"> Akshant Jain</a>
             <div id="navbar-right" class="fixed">
-                <a target="_self" href="../pages/home.html">Home</a>
+                <a target="_self" href="../index.html">Home</a>
                 <a class="active" target="_self" href="../pages/coursework.html">Coursework</a>
                 <div class="dropdown">
                     <a target="_self" href="../pages/projects.html">Projects</a>
