Update c and c++ projects.html

--- a/pages/c and c++ projects.html
+++ b/pages/c and c++ projects.html
@@ -63,7 +63,7 @@
                 <li>Coded a game using arrays and complex if-else statements somewhat like in this video. The game ends after a winning combination is formed.</li>
                 <li>Project 4. Twisted Hangman</li>
                 <li>Coded a word game using strings, multiple vectors, for loops, random functions and if-else statements in which a random number is selected from the dictionary of the userinput length and then the player is given 15 chances in which the player progresses by guessing a character in the word.</li>
-                <li>Project 5, 6. Rico Robots and Rico Robots (Rebooted)</li>
+                <li>Project 5 & 6. Rico Robots and Rico Robots (Rebooted)</li>
                 <li>Coded a game using C++ classes and linked list and many more in which 4 Character Robots(A, B, C, D) are placed at a default place with usertype (default, user specified robot and goal, random) goal and then the player has to go to the goal with the specified goal with using and preventing obstacles.</li>
                 <li>Project 7.  Binary Search in Dynamic Array</li>
                 <li>Coded a program to find a specific integer from an dynamic array (re-size-able).</li>
@@ -75,7 +75,7 @@
                 <li>Coded a program which works as a restaurant waiting list system which takes various inputs like number of peoples and other commands like call-ahead, adding a group of people to the list, number of groups with number of peoples using dynamic array, multiple program files and make-file and classes.</li>
                 <li>Project 11.  Infix Expression Evaluation</li>
                 <li>Coded a program which used stack operations in dynamic array like push, push, delete, resize to evaluate a infix expression containing integers and symbols if the expression is valid.</li>
-                <li>Project 12&13.  Airport Travel System and Airport Travel System (Rebooted)</li>
+                <li>Project 12 & 13.  Airport Travel System and Airport Travel System (Rebooted)</li>
                 <li>Coded a program which used two separate linked list classes of different types which used complex communication within classes. The program was able to take a large information from multiple input files and then process to give various information like airports and destination airports, shortest path between two airports and additional basic commands.</li>
                 <li>Project 14. Linked List Operations</li>
                 <li>Coded various functions which supports linked lists according to the run-time requirements .</li>
