--- a/pages/resume.html
+++ b/pages/resume.html
@@ -55,9 +55,9 @@
         <!------------------------------ Section in the page ------------------------------------------>
         <div class="content_resume">
             <!--object width="1000px" height="1130px" data="Akshant Jain_Resume.pdf"></object-->
-            <a class="button" target="_blank", href="#"> Download Resume </a>
+            <a class="button" target="_blank", href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view?usp=sharing"> Download Resume </a>
             <img src="../images/Akshant Jain_Resume.jpg" class="resume">
-            <a class="button" target="_blank", href="#" style="margin-bottom: 20px;"> Download Resume </a>
+            <a class="button" target="_blank", href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view?usp=sharing" style="margin-bottom: 20px;"> Download Resume </a>
         </div>
 
         <!------------------------------------- Footer of the Page -------------------------------------->
