--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <title> Akshant Jain </title>
+        <meta charset="utf-8">
         <meta name="Description" content="Personal Website">
         <meta name="author" content="Akshant Jain">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
