desk work changes

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -81,8 +81,8 @@
                 <li><b>UIC Fall Diversity Career Fair 2018</b> - September 27, 2018</li>
                 <li style="list-style-type: none; padding-left: 30px;">Escorted Employers to their respected places and help them check-in.</li>
                 <li style="list-style-type: none; padding-left: 30px;"><i>Credit Union 1 Arena, West Harrison Street, 60607</i></li>
-                <li><b>Accountant</b> - Summer 2018</li>
-                <li style="list-style-type: none; padding-left: 30px;">Worked as an accountant, managed bills and sales and also attendant customers.</li>
+                <li><b>Desk Worker</b> - Summer 2018</li>
+                <li style="list-style-type: none; padding-left: 30px;">Managing bills and sales along with attending customers and enquiries.</li>
                 <li style="list-style-type: none; padding-left: 30px;"><i>Neeraj Motors, Alwar, Rajasthan, 301001</i></li>
             </ul>
         </div>
