java prjects added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <br>
                     <br>
                         I am an International Student in my Junior year and I have experience in programming languages like 
-                        C++, C, Python, Assembly, Java along with software like Microsoft Word, Microsoft Excel, Microsoft Power Point, Adobe Photoshop, Adobe Reader, Unix.
+                        C++, Python, Assembly, Java along with software like Microsoft Word, Microsoft Excel, Microsoft Power Point, Adobe Photoshop, Adobe Reader, Unix.
                     <br> 
                     <br>   
                         I am currently looking for Internships and co-op opportunities to gain experience in a working environment.
