--- a/pages/projects.html
+++ b/pages/projects.html
@@ -129,7 +129,15 @@
                 <li>Project 3. Attack Lab</li>
                 <li>Used Concept of Buffer overflow to manipulate a given specimen of code as a input which is to be passed in the code.</li>
             </ul>
+        </div>
 
+        <!------------------------------ Section in the page ------------------------------------------>
+        <div class="content">
+            <b>Java Projects: Fall 2019</b>
+            <ul class = "content2">
+                <li>Project 1. Baccarat Game</li>
+                <li>Coded an interactive Casino Baccarat Card Game in javaFX, java using maven with options like fresh start, double bets, etc. </li>
+            </ul>
         </div>
 
         <!------------------------------------- Footer of the Page -------------------------------------->
