--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -78,7 +78,7 @@
                 <li>MATH 210. Calculus III - Fall 2018</li>
                 <li>MATH 220. Introduction to Differential Equations - Spring 2019</li>
                 <li>MATH 310. Applied Linear Algebra - Spring 2019</li>
-                <li>MATH 220. Linear Algebra I - Fall 2019</li>
+                <li>MATH 410. Advanced Calculus I - Fall 2019</li>
             </ul>
         </div>
 
@@ -89,9 +89,10 @@
                 <div class="column">
                     <b>Programming Languages</b>
                     <ul class="content">
-                        <li> C++, C</li>
+                        <li> C++</li>
                         <li>Python</li>
                         <li>Java</li>
+                        <li>JavaFX</li>
                         <li>Assembly: X-64, Y-86</li>
                         <li>HTML, CSS</li>
                     </ul>
