--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="head" class="header">    <p>About Me</p>     </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="aboutme" style="align-content: center; font-size: 14px;">
+        <div class="aboutme" style="align-content: center; font-size: 14px; background-color: white">
             <div class="row">
                 <div class="column33">
                     <img src="../images/my_image.jpg" class="me">
