--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -70,7 +70,7 @@
             </ul>
         </div>
 
-        <div class="content" style="background-color: #e2e2e2c9">
+        <div class="content" style="background-color: #e2e2e2">
             <b>Mathematics (Minor):</b>
             <ul class="content">
                 <li>MATH 180. Calculus I - Fall 2017</li>
@@ -119,7 +119,7 @@
 
         <!------------------------------ Section in the page ------------------------------------------>
         <div class="section">    <p>Online Courses and Books</p>    </div>
-        <div class="content" style="background-color: #e2e2e2c9">
+        <div class="content" style="background-color: #e2e2e2">
             <ul class="content">
                 <li><b>Java: A Beginner's Guide, 7th Edition, by Herbert Schildt, 2017</b></li>
                 <li>
