--- a/pages/experience.html
+++ b/pages/experience.html
@@ -76,7 +76,7 @@
 
         <!---------------------------------- Next Section in the page --------------------------------->
         <div class="section">    <p>Work and Volunteer</p>    </div>
-        <div class="content" style="background-color: #e2e2e2c9">
+        <div class="content" style="background-color: #e2e2e2">
             <ul class="content">
                 <li><b>UIC Fall Diversity Career Fair 2018</b> - September 27, 2018</li>
                 <li style="list-style-type: none; padding-left: 30px;">Escorted Employers to their respected places and help them check-in.</li>
