--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
         </div>
         
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="content" style="background-color: #e2e2e2c9">
+        <div class="content" style="background-color: #e2e2e2">
             <b>C++ Projects: Spring 2018</b>
             <ul class="content2">
                 <li>Project 1. Toothpick Game</li>
@@ -105,7 +105,7 @@
         </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="content" style="background-color: #e2e2e2c9">
+        <div class="content" style="background-color:#e2e2e2">
             <b>C++, C Projects: Spring 2019</b>
             <ul class="content2">
                 <li>Project 1. Linked List Operations</li>
