--- a/pages/resume.html
+++ b/pages/resume.html
@@ -53,7 +53,7 @@
         <div class="section" style="padding-top: 60px;">    <p>Resume</p>    </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="content_resume">
+        <div class="content_resume" style="background-color: white;">
             <!--object width="1000px" height="1130px" data="Akshant Jain_Resume.pdf"></object-->
             <a class="button" target="_blank", href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view?usp=sharing"> Download Resume </a>
             <img src="../images/Akshant Jain_Resume.jpg" class="resume">
