--- a/pages/resume.html
+++ b/pages/resume.html
@@ -24,7 +24,7 @@
         <script src="../scripts/navigation_side.js"></script>
     </head>
 
-    <body id="mybody">
+    <body id="mybody" style="background-color: white;">
         <!------------------------ Navigation Bar of the website -------------------------------------->
         <div id="navbar" class="navbar">
             <a href="#default" class="logo" style="color: white; cursor: default"> <img src="../images/favicon2.png"> Akshant Jain</a>
@@ -53,7 +53,7 @@
         <div class="section" style="padding-top: 60px;">    <p>Resume</p>    </div>
 
         <!------------------------------ Section in the page ------------------------------------------>
-        <div class="content_resume" style="background-color: white;">
+        <div class="content_resume">
             <!--object width="1000px" height="1130px" data="Akshant Jain_Resume.pdf"></object-->
             <a class="button" target="_blank", href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view?usp=sharing"> Download Resume </a>
             <img src="../images/Akshant Jain_Resume.jpg" class="resume">
