--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -20,6 +20,7 @@
         <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../images/favicon2.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="../scripts/navigation_bar.js"></script>
         <script src="../scripts/navigation_side.js"></script>
     </head>
