--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="column66">
                     <p class="intro"> <span class="heading" style="font-size: 17px;">Hi! I am Akshant Jain.</span> <br> <br>
-                        Pursuing <strong> B.S in Computer Science </strong> along with <strong> Minor in Mathematics </strong> at <i> University of Illinois at Chicago. </i> 
+                        Pursuing <strong> B.S in Computer Science </strong> along with <strong> Minor in Mathematics </strong> at University of Illinois at Chicago. 
                         I love learning new programming languages and using them to achieve my goals and assignments.
                     <br>
                     <br>
