--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon2.png">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Akshant Jain | Web Designer and Software Developer</title>
 
     <!-- Bootstrap core CSS -->
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -23,8 +24,7 @@
 
     <!-- Custom fonts for this template -->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#skills">Coursework & Skills</a>
@@ -72,31 +72,106 @@
         <div class="container d-flex h-75 align-items-center pt-5">
             <div class="mx-auto text-center pb-1">
                 <h1 class="mx-auto my-0 text-uppercase text-white pt-3">Akshant Jain</h1>
-                <h2 class="text-white mx-auto mt-2 mb-5 pt-3">Aspiring Software and Web Developer</h2>
+                <section class="mt-4" ></section>
+                <h2 class="text-white mx-auto mt-2 mb-5 pt-3">Aspiring Software Developer and Web Designer</h2>
             </div>
         </div>
         <div class="container d-flex h-25 p-5 align-items-end">
             <div class="mx-auto text-center">
                 <a href="#about" class="btn btn-primary js-scroll-trigger">
-                    <span>&#8595;</span> about me <span>&#8595;</span>
+                    <!-- <span>&#8595;</span>  -->
+                    about me 
+                    <!-- <span>&#8595;</span> -->
                 </a>
             </div>
         </div>
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Hi! I am Akshant Jain!</h2>
-                    <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be
-                        yours right now, simply download the template on
-                        <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The
-                        theme is open source, and you can use it for any purpose, personal or commercial.</p>
+    <section id="about" class="about-section">
+        <div class="container-fluid">
+            <h1 class="mx-5 text-left text-uppercase heads">About Me</h1>
+            <div class="row ml-5">
+                <div class="col-12 col-sm-6 pl-5">
+                    <h2 class="text-white mb-4 text-left">Hi! I am Akshant Jain!</h2>
+                    <p class="text-white-50 mb-3 text-left"><strong>I'm a fourth year student at Northeastern University</strong> in Boston studying computer
+                        science and interaction design. I have experience developing and designing software for the web, from simple landing
+                        pages to progressive web applications. I strive to create software that not only functions efficiently under the
+                        hood, but also provides intuitive, pixel-perfect user experiences.
+                    </p>
+                    <p class="text-white-50 mb-3 text-left">I love learning new and better ways to create seamless user experiences with clean, efficient, and
+                        scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who
+                        are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create
+                        something beautiful with people that bring out the best in me.
+                    </p>
+                    <p class="text-white-50 mb-3 text-left">I love learning new and better ways to create seamless user experiences with clean, efficient, and
+                        scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who
+                        are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create
+                        something beautiful with people that bring out the best in me.</p>
+                </div>
+                <div class="col-12 col-sm-6 mx-0 text-center mb-5">
+                    <div class="headshot" id="myImage"></div>
                 </div>
             </div>
-            <!-- <img src="img/about.png" class="img-fluid" alt=""> -->
+        </div>
+    </section>
+
+    <!-- Coursework & Skills Section -->
+    <section id="skills" class="skill-section">
+        <div class="container-fluid">
+            <h1 class="mx-5 text-right text-uppercase heads">Courserowk and Skills</h1>
+            <!-- <div class="row">
+                <div class="mx-auto col">
+                    <h2 class="text-white">Coursework</h2>
+                    <ul class="text-white-50 coursework">
+                        <li>Program Design</li>
+                        <li>Data Structures</li>
+                        <li>Software Design</li>
+                        <li>Programming Languages and Its Implementations</li>
+                        <li>Computer Design</li>
+                        <li>Software Development for Mobile Platforms</li>
+                        <li>Web and Multimedia Technology</li>
+                    </ul>
+                </div>
+            </div> -->
+            <!-- <div class="row">
+                <div class="mx-auto col">
+                    <h2 class="text-white">Skills</h2>
+                    <ul class="text-white-50">
+                        <li>
+                            <h3>Programming Languages</h3>
+                            <ul class="prog">
+                                <li>Java</li>
+                                <li>C++</li>
+                                <li>C</li>
+                                <li>Python</li>
+                                <li>SQL</li>
+                                <li>F#</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>Web Development</h3>
+                            <ul class="web">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>Bootstrap</li>
+                                <li>API</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>Tools and Technologies</h3>
+                            <ul class="tools">
+                                <li>Github, Git</li>
+                                <li>Chrome Dev Tools</li>
+                                <li>Android Studio</li>
+                                <li>Arduino</li>
+                                <li>Command Line</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div> -->
         </div>
     </section>
 
@@ -161,6 +236,9 @@
         </div>
     </section>
 
+    <!-- Experience Section -->
+    <section id="experience" class=""></section>
+
     <!-- Signup Section -->
     <section id="signup" class="signup-section">
         <div class="container">
@@ -190,22 +268,11 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
-                            <hr class="my-4">
-                            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Email</h4>
+                            <i class="fab fa-github-alt text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">GitHub</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">your@domain.com</a>
+                               <a href="#">github.com/Akshantjain</a>
                             </div>
                         </div>
                     </div>
@@ -214,19 +281,56 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
+                            <i class="text-primary mb-3">
+                                <!-- The Google logo code has been taken from "developers.google.com" website using Chrome Dev Tools -->
+                                <svg class="google-colored" version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="16px"
+                                    viewBox="0 0 48 48" class="abcRioButtonSvg">
+                                    <g>
+                                        <path fill="#EA4335"
+                                            d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
+                                        </path>
+                                        <path fill="#4285F4"
+                                            d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z">
+                                        </path>
+                                        <path fill="#FBBC05"
+                                            d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z">
+                                        </path>
+                                        <path fill="#34A853"
+                                            d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z">
+                                        </path>
+                                        <path fill="none" d="M0 0h48v48H0z"></path>
+                                    </g>
+                                </svg>
+                                <!-- The Google Logo code from "developers.google.com ends here" -->
+                            </i>
+                            <h4 class="text-uppercase mt-1">Gmail</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">+1 (555) 902-8832</div>
+                            <div class="small text-black-50">
+                                <a href="#">akshant.jain2@gmail.com</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fab fa-linkedin text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">LinkedIn</h4>
+                            <hr class="my-4">
+                            <div class="small text-black-50">
+                                <a href="#">linkedin.com/in/akshantjain/</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="social d-flex justify-content-center">
                 <a href="#" class="mx-2 google">
                     <!-- The Google logo code has been taken from "developers.google.com" website using Chrome Dev Tools -->
-                    <svg class="google-colored" version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="16px"
+                    <svg class="google-colored" version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="15px"
                         viewBox="0 0 48 48" class="abcRioButtonSvg">
                         <g>
                             <path fill="#EA4335"
