--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 
@@ -91,35 +91,53 @@
     <section id="about" class="about-section">
         <div class="container-fluid">
             <h1 class="mx-5 text-left text-uppercase heads">About Me</h1>
-            <div class="row ml-5">
-                <div class="col-12 col-sm-6 pl-5">
-                    <h2 class="text-white mb-4 text-left">Hi! I am Akshant Jain!</h2>
-                    <p class="text-white-50 mb-3 text-left"><strong>I'm a fourth year student at Northeastern University</strong> in Boston studying computer
-                        science and interaction design. I have experience developing and designing software for the web, from simple landing
-                        pages to progressive web applications. I strive to create software that not only functions efficiently under the
-                        hood, but also provides intuitive, pixel-perfect user experiences.
+            <div class="row m-5">
+                <div class="about-intro">
+                    <img src="img/my_image.jpg" class="headshot container">
+                    <h2 class="text-white mb-2 text-left">Hi! I am Akshant Jain!</h2>
+                    <span class="line mt-0 mb-4"></span>
+                    <p class="text-white-50 mb-3 text-justify">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
+                    eleifend. Praesent sagittis, purus nec auctor convallis, urna est rutrum augue, nec congue purus leo id ipsum. Integer
+                    in congue risus. Mauris sed nibh velit. Nam ut mauris dolor. Mauris efficitur dictum placerat. Donec non mi eu tortor
+                    fringilla cursus. Integer aliquam rhoncus sagittis. Phasellus condimentum scelerisque semper. Mauris at finibus dolor,
+                    in interdum metus. Suspendisse lacinia convallis posuere. Vivamus eu lorem et velit feugiat ultricies. Aenean at odio
+                    eget sem dictum sagittis. Nam congue suscipit tempus. Proin hendrerit rhoncus massa ut sodales. Aliquam in ipsum sed
+                    magna pellentesque hendrerit quis sit amet sapien.
                     </p>
-                    <p class="text-white-50 mb-3 text-left">I love learning new and better ways to create seamless user experiences with clean, efficient, and
-                        scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who
-                        are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create
-                        something beautiful with people that bring out the best in me.
+                    <p class="text-white-50 mb-3 text-justify">
+                        Phasellus sollicitudin lectus id egestas lobortis. Proin bibendum porttitor odio ac luctus. Integer sit amet ullamcorper
+                    ex. Maecenas fermentum nunc massa, non gravida ipsum efficitur dignissim. Aenean iaculis risus ante, eu porta tellus
+                    iaculis fermentum. Praesent consequat est lectus, vel ultricies ipsum vehicula et. In tempus at felis ut accumsan.
+                    Nullam pellentesque orci in nunc sollicitudin, eu commodo felis fermentum. Nunc et vestibulum sapien, nec euismod nibh.
+                    Fusce interdum diam at aliquet pellentesque. Nulla tempor elit vel dolor blandit, eu feugiat urna cursus. Maecenas
+                    cursus finibus tellus ac congue. Cras luctus consequat enim, ac vehicula risus. Sed a nisl non velit semper placerat
+                    vitae ut neque.
                     </p>
-                    <p class="text-white-50 mb-3 text-left">I love learning new and better ways to create seamless user experiences with clean, efficient, and
-                        scalable code. I consider work an ongoing education, and I'm always looking for opportunities to work with those who
-                        are willing to share their knowledge as much as I want to learn. At the end of the day, my primary goal is to create
-                        something beautiful with people that bring out the best in me.</p>
+                    <!-- <p class="text-white-50 mb-3 text-left">
+                    </p> -->
                 </div>
-                <div class="col-12 col-sm-6 mx-0 text-center mb-5">
-                    <div class="headshot" id="myImage"></div>
-                </div>
+                <!-- <div class="headshot">
+                     <div class="headshot" id="myImage"></div>
+                </div> -->
             </div>
         </div>
     </section>
 
     <!-- Coursework & Skills Section -->
     <section id="skills" class="skill-section">
-        <div class="container-fluid">
-            <h1 class="mx-5 text-right text-uppercase heads">Courserowk and Skills</h1>
+        <div class="container-fluid px-5">
+            <h1 class=" text-right text-uppercase heads mx-5">Courserowk and Skills</h1>
+            <div class="row m-5">
+                <div class="col" id="works">
+                    <h2 class="text-white mb-2 text-left">Courserowk</h2>
+                    <span class="line mt-0 mb-4 w-50"></span>
+                </div>
+                <div class="col" id="skills">
+                    <h2 class="text-white mb-2 pl-2 text-left">Tools & Technologies</h2>
+                    <span class="line mt-0 mb-4 ml-2 w-50"></span>
+                </div>
+            </div>
             <!-- <div class="row">
                 <div class="mx-auto col">
                     <h2 class="text-white">Coursework</h2>
@@ -187,9 +205,8 @@
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Shoreline</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use
-                            it for any project - even commercial projects! Download it, customize it, and publish your
-                            website!</p>
+                        <p class="text-black-50 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
+                        eleifend. Praesent sagittis, purus nec auctor convallis, urna est rutrum augue, nec congue purus leo id ipsum.</p>
                     </div>
                 </div>
             </div>
@@ -204,8 +221,8 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or
-                                    anything else, along with a description.</p>
+                                <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
+                                eleifend.</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
                         </div>
@@ -223,9 +240,8 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective
-                                    description. These sections work well responsively as well, try this theme on a
-                                    small screen!</p>
+                                <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
+                                eleifend.</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
                         </div>
@@ -268,7 +284,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fab fa-github-alt text-primary mb-2"></i>
+                            <i class="fab fa-github text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">GitHub</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
@@ -396,7 +412,7 @@
     </script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
