--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
                 <h2 class="text-white mx-auto mt-2 mb-5 pt-3">Aspiring Software Developer and Web Designer</h2>
             </div>
         </div>
-        <div class="container d-flex h-25 p-5 align-items-end">
-            <div class="mx-auto text-center">
+        <div class="container d-flex h-25  pb-5 align-items-end">
+            <div class="mx-auto text-center" id="scroll">
                 <a href="#about" class="btn btn-primary js-scroll-trigger">
-                    <!-- <span>&#8595;</span>  -->
-                    about me 
-                    <!-- <span>&#8595;</span> -->
+                    <span></span>
+                    about me
                 </a>
             </div>
         </div>
@@ -130,12 +129,12 @@
             <h1 class=" text-right text-uppercase heads mx-5">Courserowk and Skills</h1>
             <div class="row m-5">
                 <div class="col" id="works">
-                    <h2 class="text-white mb-2 text-left">Courserowk</h2>
+                    <h2 class="text-white mb-2 text-left text-uppercase">Courserowk</h2>
                     <span class="line mt-0 mb-4 w-50"></span>
                 </div>
                 <div class="col" id="skills">
-                    <h2 class="text-white mb-2 pl-2 text-left">Tools & Technologies</h2>
-                    <span class="line mt-0 mb-4 ml-2 w-50"></span>
+                    <h2 class="text-white mb-2 pl-2 text-left text-uppercase">Tools & Technologies</h2>
+                    <span class="line mt-0 mb-4 ml-2 w-75"></span>
                 </div>
             </div>
             <!-- <div class="row">
@@ -346,8 +345,7 @@
             <div class="social d-flex justify-content-center">
                 <a href="#" class="mx-2 google">
                     <!-- The Google logo code has been taken from "developers.google.com" website using Chrome Dev Tools -->
-                    <svg class="google-colored" version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="15px"
-                        viewBox="0 0 48 48" class="abcRioButtonSvg">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="16px"viewBox="0 0 48 48">
                         <g>
                             <path fill="#EA4335"
                                 d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
@@ -364,7 +362,7 @@
                             <path fill="none" d="M0 0h48v48H0z"></path>
                         </g>
                     </svg>
-                    <!-- The Google Logo code from "developers.google.com ends here" -->
+                    <!-- The Google Logo code from "developers..com ends here" -->
                 </a>
 
                 <a href="#" class="mx-2 linkedin">
