--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="about" class="about-section">
         <div class="container-fluid">
             <h1 class="mx-5 text-left text-uppercase heads">About Me</h1>
-            <div class="row m-5">
+            <div class="row m-4">
                 <div class="about-intro">
                     <img src="img/my_image.jpg" class="headshot container">
                     <h2 class="text-white mb-2 text-left">Hi! I am Akshant Jain!</h2>
@@ -121,6 +121,14 @@
                 </div> -->
             </div>
         </div>
+        <div class="container d-flex h-25 align-items-end">
+            <div class="mx-auto text-center skills mt-1 p-5" id="scroll">
+                <a href="#skills" class="btn btn-primary bg-transparent js-scroll-trigger">
+                    <span></span>
+                    Coursework & Skills
+                </a>
+            </div>
+        </div>
     </section>
 
     <!-- Coursework & Skills Section -->
@@ -129,12 +137,19 @@
             <h1 class=" text-right text-uppercase heads mx-5">Courserowk and Skills</h1>
             <div class="row m-5">
                 <div class="col" id="works">
-                    <h2 class="text-white mb-2 text-left text-uppercase">Courserowk</h2>
-                    <span class="line mt-0 mb-4 w-50"></span>
+                    <h3 class="text-white mb-2 text-left text-uppercase">Courserowk</h2>
+                    <!-- <span class="line mt-0 mb-4 w-50"></span> -->
                 </div>
-                <div class="col" id="skills">
-                    <h2 class="text-white mb-2 pl-2 text-left text-uppercase">Tools & Technologies</h2>
-                    <span class="line mt-0 mb-4 ml-2 w-75"></span>
+                <div class="col">
+                    <div class="row" id="skills">
+                        <h3 class="text-white mb-2 pl-2 text-left text-uppercase">Tools</h2>
+                        <!-- <span class="line mt-0 mb-4 ml-2 w-75"></span> -->
+                    </div>
+                    <div class="row" id="skills">
+                        <h3 class="text-white mb-2 pl-2 text-left text-uppercase">Technologies</h2>
+                        <!-- <span class="line mt-0 mb-4 ml-2 w-75"></span> -->
+                    </div>
+                
                 </div>
             </div>
             <!-- <div class="row">
@@ -190,12 +205,20 @@
                 </div>
             </div> -->
         </div>
+        <div class="container d-flex h-25 align-items-end">
+            <div class="mx-auto text-center skills mt-1 pt-4" id="scroll">
+                <a href="#projects" class="btn btn-primary bg-transparent js-scroll-trigger">
+                    <span></span>
+                    Projects
+                </a>
+            </div>
+        </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
         <div class="container">
-
+            
             <!-- Featured Project Row -->
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                 <div class="col-xl-8 col-lg-7">
