--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon2.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
 
     <title>Akshant Jain | Web Designer and Software Developer</title>
 
@@ -217,60 +217,23 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light contents">
-        <div class="container">
-            
-            <!-- Featured Project Row -->
-            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                <div class="col-xl-8 col-lg-7">
-                    <img class="img-fluid mb-3 mb-lg-0" src="img/proj1.JPG" alt="">
-                </div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Shoreline</h4>
-                        <p class="text-black-50 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
-                        eleifend. Praesent sagittis, purus nec auctor convallis, urna est rutrum augue, nec congue purus leo id ipsum.</p>
-                    </div>
-                </div>
-            </div>
+        <div class="container-fluid">
+            <h1 class="mx-5 text-left text-uppercase heads mb-3">Projects</h1>
+            <div class="container sections my-1 pt-3">
+                <img class="featured-image" src="img/HS_pic2.JPG">
+                <div class="w-100 project-overlay container">
+                    <div class="w-100 ">
+                        <p class="m-1 mx-1">
+                            <span class="titles">Home Security System</span> <br>
+                            <span class="duration text-weight-bold">August - December 2019</span>
+                        </p>
+                        <p class="project-description">
 
-            <!-- Project One Row -->
-            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="img/proj1.JPG" alt="">
-                </div>
-                <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
-                                eleifend.</p>
-                                <hr class="d-none d-lg-block mb-0 ml-0">
-                            </div>
+                        </p>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Project Two Row -->
-            <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="img/proj1.JPG" alt="">
-                </div>
-                <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit tortor a lacus maximus, ac maximus purus
-                                eleifend.</p>
-                                <hr class="d-none d-lg-block mb-0 mr-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </section>
 
@@ -300,9 +263,7 @@
     <!-- Contact Section -->
     <section class="contact-section bg-black contents" id="contact">
         <div class="container">
-
             <div class="row">
-
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
