--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -90,29 +90,30 @@
                 <div class="column">
                     <b>Programming Languages</b>
                     <ul class="content">
-                        <li> C++</li>
-                        <li>Python</li>
                         <li>Java</li>
-                        <li>JavaFX</li>
-                        <li>Assembly: X-64, Y-86</li>
-                        <li>HTML, CSS</li>
+                        <li>C++</li>
+                        <li>Python</li>
+                        <li>HTML5, CSS</li>
+                        <li>Javascript, Bootstrap, API</li>
+                        <li>SQL, JavaFX</li>
                     </ul>
                 </div>
                 <div class="column">
-                    <b>Softwares</b>
+                    <b>Tools & Technologies</b>
                     <ul class="content">
-                        <li>Linux, Ubuntu</li>
-                        <li>Adobe Photosope, Image Editing</li>
-                        <li>Adobe</li>
+                        <li>Github, Git</li>
+                        <li>Chrome Dev Tools</li>
+                        <li>Arduino</li>
+                        <li>Command Line, Linux</li>
                     </ul>
                 </div>
 
                 <div class="column">
-                    <b>Microsoft Office</b>
+                    <b>IDE</b>
                     <ul class="content">
-                        <li>Microsoft Word</li>
-                        <li>Microsoft Excel</li>
-                        <li>Microsoft Power Point</li>
+                        <li>IntelliJ</li>
+                        <li>Android Studio</li>
+                        <li>VS Code</li>
                     </ul>
                 </div>
             </div>
