--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
                 <div class="col-12 my-auto">
                     <div class="masthead-content text-white py-5 py-md-0">
                         <h1 class="mb-3">Coming Soon!</h1>
-                        <p class="mb-5">I'm working hard to finish the development of this site. Expected launch date is
+                        <p class="mb-5">I'm working hard to finish the development of the new version of this site. Expected launch date is
                             <strong>May 2020 or Sooner</strong>!
                         </p>
                     </div>
