--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
     <title>In Development</title>
 
